Fix IE8 javascript and layout issues. BZ #656531
git-svn-id: file:///srv/svn/publican/trunk@1642 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -40,7 +40,8 @@ iframe.notoc {
 	border: none;
 	padding: 0em;
 	position:fixed;
-	width: 2em;
+	width: 21px;
+	height: 29px;
 	top: 0px;
 	left:0;
 	overflow: hidden;
