--- a/publican/web/interactive.css
+++ b/publican/web/interactive.css
@@ -145,6 +145,34 @@ body.tocnav {
 	position: relative;
 }
 
+/* Need for Stats page */
+
+body.toc_embeded {
+	/*for web hosting system only*/
+	margin-left: 300px;
+}
+
+
+body.notoc {
+	margin-left: 3em;
+}
+
+iframe.notoc {
+	border-style:none;
+	border: none;
+	padding: 0em;
+	position:fixed;
+	width: 21px;
+	height: 29px;
+	top: 0px;
+	left:0;
+	overflow: hidden;
+	margin: 0em;
+	margin-left: -3px;
+}
+
+/* End Need for Stats page */
+
 /* Hide menu */
 body.notocnav {
 	width: 4em;
